fixed: FunctionalStorage